Make resolver splash nicer.

--- a/Resolver/src/org/icpc/tools/resolver/messages.properties
+++ b/Resolver/src/org/icpc/tools/resolver/messages.properties
@@ -2,7 +2,7 @@ splashTitle=ICPC Resolver
 splashConceptBy=Concept by
 splashConceptAttr1=Fredrik Niemelä
 splashConceptAttr2=Mattias de Zalenski
-splashConceptOrg=KTH Royal Institute of Technology
+splashConceptOrg=KTH
 splashImplBy=Implementation by
 splashImplAttr=Tim deBoer
 splashImplOrg=IBM
